--- a/popup.html
+++ b/popup.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head><title>Highlighter Options</title></head>
+<head>
+    <title>Highlighter Options</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
 <body>
 
-Highlighter Color:
-<select id="color">
-    <option value="yellow">yellow</option>
-    <option value="red">red</option>
-    <option value="green">green</option>
-    <option value="blue">blue</option>
-</select>
-<input type="checkbox" id="italics"><label>Italicize</label>
-<input type="checkbox" id="bold"><label>Bold</label>
-<input type="checkbox" id="underline"><label>Underline</label>
+    <div>Highlighter Color:</div>
+    <select id="color">
+        <option value="yellow" selected="selected">yellow</option>
+        <option value="red">red</option>
+        <option value="green">green</option>
+        <option value="blue">blue</option>
+    </select>
+    <input type="checkbox" id="italics" checked><label>Italicize</label>
+    <input type="checkbox" id="bold"><label>Bold</label>
+    <input type="checkbox" id="underline"><label>Underline</label>
 
-
-
-<div id="status"></div>
-<button id="save">Save</button>
-
-<script src="main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
